# foss4g_2025_geofm

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml  setup-dev.sh  test_terratorch_imports.py
.github/: copilot-instructions.md
examples/: basic_stac_loading.py  multitemporal_analysis.py  terramind_embeddings.py
notebooks/: odc_stac_terratorch_demo.ipynb
