[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foss4g-2025-geofm"
version = "0.1.0"
description = "FOSS4G 2025 Demo: Loading geospatial data via odc-stac into TerraTorch for foundation model workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "FOSS4G 2025 Contributors"}
]
keywords = ["geospatial", "machine-learning", "stac", "terratorch", "satellite-imagery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    # STAC and data loading
    "odc-stac>=0.3.0",
    "pystac-client>=0.7.0",
    "stackstac>=0.4.0",

    # Geospatial data handling
    "xarray>=2022.12.0",
    "rasterio>=1.3.0",
    "dask[complete]>=2023.1.0",
    "geopandas>=0.12.0",

    # Machine Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "terratorch>=0.1.0",
    "scikit-learn>=1.1.0",
    "numpy>=1.21.0",
    "timm>=0.9.0",

    # Cloud storage and authentication
    "boto3>=1.26.0",

    # Visualization
    "matplotlib>=3.5.0",
    "cartopy>=0.21.0",
    "folium>=0.14.0",
    "holoviews>=1.17.0",
    "bokeh>=3.2.0",

    # Utilities
    "pyyaml>=6.0.0",
    "tqdm>=4.64.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",

    # Optional: Planetary Computer (fallback STAC catalog)
    "planetary-computer>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",

    # Code quality and formatting
    "ruff>=0.14.5",
    "mypy>=1.0.0",

    # Pre-commit and notebook tools
    "pre-commit>=3.0.0",
    "nbstripout>=0.8.0",

    # Documentation (optional)
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# Optional: Additional visualization tools
vis = [
    "plotly>=5.0.0",
    "seaborn>=0.12.0",
    "hvplot>=0.8.0",
]

# Optional: Additional ML tools
ml = [
    "xgboost>=1.7.0",
    "optuna>=3.0.0",
    "wandb>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/whatnick/foss4g_2025_geofm"
Repository = "https://github.com/whatnick/foss4g_2025_geofm"
Documentation = "https://github.com/whatnick/foss4g_2025_geofm/blob/main/README.md"
Issues = "https://github.com/whatnick/foss4g_2025_geofm/issues"

[tool.uv]
# UV-specific configuration
dev-dependencies = ["foss4g-2025-geofm[dev]"]

[tool.ruff]
# Ruff configuration (can override ruff.toml for package-specific settings)
extend = "ruff.toml"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--strict-markers --strict-config --verbose"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
